--- a/packages/web/public/index.html
+++ b/packages/web/public/index.html
@@ -5,7 +5,9 @@
     <!-- cf: https://www.emergeinteractive.com/insights/detail/the-essentials-of-favicons/ -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Payminto</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous" />
+
+    <title>Ipsum Messenger</title>
   </head>
   <body>
     <div id="root"></div>
